MODSOURCE-855: code review